[tool.poetry]
name = "watermill"
version = "0.1.0"
description = "An experimental, streaming, stateful, minimalistic ETL built on top of River "
authors = ["MaxHalford <maxhalford25@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
river = "0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
